--- a/BudgetBay.App/BudgetBay.Client/package.json
+++ b/BudgetBay.App/BudgetBay.Client/package.json
@@ -10,15 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@tanstack/react-query": "^5.90.7",
+    "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "jwt-decode": "^4.0.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/cli": "^4.1.17",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
@@ -27,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "msw": "^2.12.1",
+    "tailwindcss": "^4.0.0",
     "vite": "^7.1.9"
   },
   "msw": {
